--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
-lightnlp/.vscode
-.*/__pycache__
-lightnlp/sl/ner/.idea
-lightnlp/sl/ner/utils/__pycache__
-lightnlp/sl/ner/__pycache__
-lightnlp/sl/ner/\.*
-lightnlp/sl/ner/__pycache__
-lightnlp/sl/ner/.vector_cache
-.vscode
+*__pycache__*
+*.vector_cache*
+*.vscode*
+*.idea*
 build
 dist
 lightnlp.egg-info
-test/saves
-lightnlp/__pycache__
-lightnlp/sl/__pycache__
-build
-dist
+.vscode
 lightNLP.egg-info
