--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torchtext==0.4.0
 tqdm==4.28.1
-torch==1.0.0
+torch==1.3.0
 pytorch_crf==0.7.0
 scikit_learn==0.20.2
 revtok
@@ -8,3 +8,4 @@ jieba
 regex
 nltk
 torchcrf
+flask
